<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ProgressBar
            android:id="@+id/loadingProgressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/productsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_general_information"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/name"
                />
            <EditText
                android:id="@+id/edCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category1"/>

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/product_description_optional1"
                />

            <EditText
                android:id="@+id/edPrice"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/price1"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/offerPercentage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/offer_percentage_optional1"
                android:inputType="numberDecimal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/productsInfo"
            app:layout_constraintStart_toStartOf="@id/productsInfo"
            app:layout_constraintEnd_toEndOf="@id/productsInfo"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edSizes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/sizes_optional_use_between_each_newsize"
                android:inputType="text"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/buttonImagesPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/images"
                    android:textSize="14sp"
                   />
                <TextView
                    android:id="@+id/tvSelectedImages"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:gravity="center"
                   />

                <Button
                    android:id="@+id/btnsave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textSize="14sp"
                    />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>